# Riddle-Game

./: CHANGELOG.md  README.md  meson.build  partidas.csv  preguntas.csv  puntuación.c
ISSUES/: bug-report-template.md
include/: game.h  menu.h  submenu.h
src/: Makefile  Questions.c  almPreguntas.c  almPreguntas.h  clasificacion.c  clasificacion.h  game.c  main.c  matches.c  menu.c  menu.h  preguntas  preguntas.txt  puntuacion.c  puntuacion2.c  questions.c  submenu.c  test.c  trivia.c  ui_test.c  user_interface.c
